--- a/workflow-templates/check-typescript-npm.yml
+++ b/workflow-templates/check-typescript-npm.yml
@@ -1,6 +1,10 @@
 # Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-typescript-npm.md
 name: Check TypeScript
 
+env:
+  # See: https://github.com/actions/setup-node/#readme
+  NODE_VERSION: 16.x
+
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
@@ -29,6 +33,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
         run: npm install --only=dev
