--- a/workflow-templates/check-packaging-ncc-typescript-task.yml
+++ b/workflow-templates/check-packaging-ncc-typescript-task.yml
@@ -1,6 +1,10 @@
 # Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-packaging-ncc-typescript-task.md
 name: Check Packaging
 
+env:
+  # See: https://github.com/actions/setup-node/#readme
+  NODE_VERSION: 16.x
+
 on:
   push:
     paths:
@@ -36,7 +40,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install Task
         uses: arduino/setup-task@v1
