--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-javascript-jest-task.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-javascript-jest-task.yml
@@ -1,6 +1,10 @@
 # Source: https://github.com/per1234/.github/blob/main/workflow-templates/test-javascript-jest-task.md
 name: Test JavaScript
 
+env:
+  # See: https://github.com/actions/setup-node/#readme
+  NODE_VERSION: 16.x
+
 on:
   push:
     paths:
@@ -35,10 +39,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set Node.js 10.x
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install Task
         uses: arduino/setup-task@v1
