Add CI workflow to lint JavaScript code
On every push and pull request that affects relevant files, and periodically, run eslint on the repository's JavaScript
files.

eslint is configured via the .eslintrc.yml file:
https://eslint.org/docs/user-guide/configuring/configuration-files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "devDependencies": {
-    "eslint": "^8.8.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsonc": "^2.1.0"
+  },
+  "scripts": {
+    "lint": "eslint --ext .js,.jsx ."
   }
 }
