--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,26 @@
 # Source: https://github.com/per1234/.github/blob/main/workflow-templates/assets/check-json/.eslintrc.yml
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/assets/check-javascript/.eslintrc.yml
+# See: https://eslint.org/docs/user-guide/configuring/
 # See: https://ota-meshi.github.io/eslint-plugin-jsonc/rules/
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
 
 extends:
+  - airbnb-base
   - plugin:jsonc/recommended-with-json
   - plugin:jsonc/prettier
+  - prettier
 plugins:
   - jsonc
+ignorePatterns:
+  - "workflow-templates/assets/check-javascript/"
+  - "workflow-templates/assets/check-typescript/"
 rules:
+  max-len:
+    - warn
+    - code: 180
+  no-console: "off"
+  no-underscore-dangle: "off"
   jsonc/key-name-casing:
     - warn
     - camelCase: true
