Add `package-lock.json` to ignored files for ESLint
The "Check JSON" template uses ESLint with a plugin to check the style of JSON files. The tool must be configured to
ignore automatically generated files, since any violations that occur in these files can not be resolved.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,6 +13,7 @@ extends:
 plugins:
   - jsonc
 ignorePatterns:
+  - "**/package-lock.json"
   - "workflow-templates/assets/check-javascript/"
   - "workflow-templates/assets/check-typescript/"
 rules:
