Restrict permissions of `GITHUB_TOKEN` in workflows
`GITHUB_TOKEN` is an access token provided automatically by GitHub Actions. By default, this token has write permissions
except when the workflow is triggered by events generated by a PR from a fork.

This level of privilege is not needed by any of the workflows, which violates the security principle of least privilege.

For this reason, GitHub Actions now allows fine grained control of the permissions provided to the token, which are used
here to configure the workflows for only the permissions they require. The automatic permissions downgrade from write to
read for workflows triggered by events generated by a PR from a fork is unaffected.

Even when all permissions are withheld (permissions: {}`), the token still provides the authenticated API request rate
limiting allowance, which is the most common use of the token in these workflows.

Read permissions are required in the "contents" scope in order to checkout private repositories. Even though those
permissions are not required for public repositories, the workflow templates are intended to be applicable in public and
private repositories both and so a small excess in permissions was chosen over a large increase in maintenance effort to
have an extra version of each of the workflows for use in private repositories.

--- a/.github/workflows/check-configs.yml
+++ b/.github/workflows/check-configs.yml
@@ -24,6 +24,8 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions: {}
+
 jobs:
   validate:
     name: ${{ matrix.configuration.path }}
