--- a/workflow-templates/check-asciidoc.yml
+++ b/workflow-templates/check-asciidoc.yml
@@ -21,6 +21,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   syntax:
     runs-on: ubuntu-latest
