--- a/workflow-templates/check-toc.yml
+++ b/workflow-templates/check-toc.yml
@@ -15,6 +15,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   check:
     name: ${{ matrix.file.name }}
