--- a/.github/workflows/check-npm.yml
+++ b/.github/workflows/check-npm.yml
@@ -23,6 +23,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   validate:
     runs-on: ubuntu-latest
