--- a/workflow-templates/check-packaging-ncc-typescript-npm.yml
+++ b/workflow-templates/check-packaging-ncc-typescript-npm.yml
@@ -24,6 +24,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   check-packaging:
     runs-on: ubuntu-latest
