--- a/workflow-templates/check-packaging-ncc-typescript-task.yml
+++ b/workflow-templates/check-packaging-ncc-typescript-task.yml
@@ -29,6 +29,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   check-packaging:
     runs-on: ubuntu-latest
