--- a/workflow-templates/check-tsconfig.yml
+++ b/workflow-templates/check-tsconfig.yml
@@ -17,6 +17,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   validate:
     runs-on: ubuntu-latest
