--- a/workflow-templates/compile-examples-private.yml
+++ b/workflow-templates/compile-examples-private.yml
@@ -29,6 +29,9 @@ jobs:
   build:
     name: ${{ matrix.board.fqbn }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
 
     strategy:
       fail-fast: false
@@ -74,6 +77,8 @@ jobs:
     # Run even if some compilations failed.
     if: always() && github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
 
     steps:
       - name: Download sketches reports artifact
