--- a/workflow-templates/compile-platform-examples-private.yml
+++ b/workflow-templates/compile-platform-examples-private.yml
@@ -33,6 +33,9 @@ jobs:
   build:
     name: ${{ matrix.board.fqbn }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
 
     strategy:
       fail-fast: false
@@ -87,6 +90,8 @@ jobs:
     # Run even if some compilations failed.
     if: always() && github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
 
     steps:
       - name: Download sketches reports artifact
