--- a/workflow-templates/compile-sketches.yml
+++ b/workflow-templates/compile-sketches.yml
@@ -27,6 +27,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: ${{ matrix.board.fqbn }}
