--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-prettier-formatting.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-prettier-formatting.yml
@@ -199,6 +199,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   check:
     runs-on: ubuntu-latest
