--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/report-size-deltas.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/report-size-deltas.yml
@@ -14,6 +14,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  pull-requests: write
+
 jobs:
   report:
     runs-on: ubuntu-latest
