--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
@@ -11,6 +11,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   spellcheck:
     runs-on: ubuntu-latest
