Sync repository assets from `arduino/tooling-project-assets`
This project's infrastructure uses some of the reusable assets which are hosted in the `arduino/tooling-project-assets`
repository. Some improvements have been made to the files upstream since the time of the last sync. Those are pulled in
here.

--- a/.github/workflows/check-taskfiles.yml
+++ b/.github/workflows/check-taskfiles.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/tooling-project-assets/blob/main/workflow-templates/check-taskfiles.md
 name: Check Taskfiles
 
-# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
 on:
   push:
     paths:
@@ -44,15 +44,20 @@ jobs:
           # See: https://github.com/SchemaStore/schemastore/blob/master/src/schemas/json/taskfile.json
           file-url: https://json.schemastore.org/taskfile.json
           location: ${{ runner.temp }}/taskfile-schema
-          file-name: taskfile.json
 
       - name: Install JSON schema validator
-        run: sudo npm install --global ajv-cli
+        run: |
+          sudo npm install \
+            --global \
+            ajv-cli \
+            ajv-formats
 
       - name: Validate ${{ matrix.file }}
         run: |
           # See: https://github.com/ajv-validator/ajv-cli#readme
           ajv validate \
+            --all-errors \
             --strict=false \
+            -c ajv-formats \
             -s "${{ steps.download-schema.outputs.file-path }}" \
             -d "${{ matrix.file }}"
