--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,3 +25,12 @@ updates:
       - "topic: infrastructure"
     assignees:
       - per1234
+
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: daily
+    labels:
+      - "topic: infrastructure"
+    assignees:
+      - per1234
