--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Spell check
-        uses: codespell-project/actions-codespell@master
+        uses: codespell-project/actions-codespell@v1
