--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Spell check
-        uses: codespell-project/actions-codespell@master
+        uses: codespell-project/actions-codespell@v1
