--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
   # Configure check for outdated GitHub Actions actions in workflows.
   # See: https://docs.github.com/en/github/administering-a-repository/keeping-your-actions-up-to-date-with-dependabot
   - package-ecosystem: github-actions
-    directory: / # Check the repository's workflows under /.github/workflows/
+    directory: /.github/workflows/
     schedule:
       interval: daily
     labels:
