--- a/.github/workflows/check-shell.yml
+++ b/.github/workflows/check-shell.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Check for non-executable scripts
         run: |
+          # Source: https://github.com/arduino/tooling-project-assets/blob/main/workflow-templates/assets/check-shell-task/Taskfile.yml
           EXIT_STATUS=0
           while read -r nonExecutableScriptPath; do
             # The while loop always runs once, even if no file was found
@@ -66,21 +67,21 @@ jobs:
             fi
 
             echo "::error file=${nonExecutableScriptPath}::non-executable script file: $nonExecutableScriptPath";
-            if [[ "$EXIT_STATUS" == "0" ]]; then
-              EXIT_STATUS=1
-            fi
+            EXIT_STATUS=1
           done <<<"$(
-                      find \
-                        ${{ github.workspace }} \
-                        -path '${{ github.workspace }}/.git' -prune -or \
-                        \( \
-                          \( \
-                            -name '*.bash' -or \
-                            -name '*.sh' \
-                          \) -and \
-                          -type f -and \
-                          -not -executable -and \
-                          -print \
-                        \) \
-                  )"
+            # The odd approach to escaping `.` in the regex is required for Windows compatibility in the use case of the
+            # upstream source.
+            find . \
+              -type d -name '.git' -prune -or \
+              -type d -name '.licenses' -prune -or \
+              -type d -name '__pycache__' -prune -or \
+              -type d -name 'node_modules' -prune -or \
+              \( \
+                -regextype posix-extended \
+                -regex '.*[.](bash|sh)' -and \
+                -type f -and \
+                -not -executable \
+                -print \
+              \)
+          )"
           exit $EXIT_STATUS
