--- a/workflow-templates/report-size-deltas.yml
+++ b/workflow-templates/report-size-deltas.yml
@@ -19,6 +19,8 @@ permissions:
 
 jobs:
   report:
+    # Scheduled workflow runs would cause excess GitHub Actions service charges in a private repo
+    if: github.repository_visibility == 'public'
     runs-on: ubuntu-latest
     steps:
       - name: Comment size deltas reports to PRs
