--- a/workflow-templates/compile-platform-examples-private.yml
+++ b/workflow-templates/compile-platform-examples-private.yml
@@ -27,7 +27,6 @@ on:
 
 env:
   SKETCHES_REPORTS_PATH: sketches-reports
-  SKETCHES_REPORTS_ARTIFACT_NAME: sketches-reports
 
 jobs:
   build:
@@ -44,6 +43,8 @@ jobs:
         board:
           # TODO: Add list of boards to compile for here:
           - fqbn: arduino:avr:uno
+            # TODO: Arbitrary suffix used to give the sketches report artifact a unique filename.
+            artifact-name-suffix: arduino-avr-uno
 
     steps:
       - name: Checkout repository
@@ -88,7 +89,7 @@ jobs:
         with:
           if-no-files-found: error
           path: ${{ env.SKETCHES_REPORTS_PATH }}
-          name: ${{ env.SKETCHES_REPORTS_PATH }}
+          name: sketches-report-${{ matrix.board.artifact-name-suffix }}
 
   report-size-deltas:
     needs: build
@@ -104,7 +105,6 @@ jobs:
         continue-on-error: true # If compilation failed for all boards then there are no artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.SKETCHES_REPORTS_ARTIFACT_NAME }}
           path: ${{ env.SKETCHES_REPORTS_PATH }}
 
       - name: Comment size deltas report to PR
